--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,5 @@
-<h1>This is the placeholder</h1> 
+<% @posts.each do |post| %>
+	<h2><%= link_to post.title, post %></h2>
+<% end %>
+
+<%= link_to "Add New Inspiration", new_post_path %>
